# PermutationGroup

./: .gitignore  CMakeLists.txt  Makefile  PermutationGroup.sln  PermutationGroup.vcxproj  PermutationGroup.vcxproj.filters  PyPermGroup.pyd  README.md  SConstruct
Code/: ElementSet.cpp  ElementSet.h  FactorGroup.cpp  FactorGroup.h  NaturalNumberSet.cpp  NaturalNumberSet.h  Permutation.cpp  Permutation.h  PermutationStream.cpp  PermutationStream.h  StabilizerChain.cpp  StabilizerChain.h  StabilizerChain_Deprecated.cpp  StabilizerChain_Deprecated.h  Word.cpp  Word.h
LibPermGroup/: CMakeLists.txt
LibPermGroup/Source/: NaturalNumberSet.h  Permutation.cpp  Permutation.h  PermutationStream.cpp  PermutationStream.h  StabilizerChain.cpp  StabilizerChain.h
Paper/: TheFactorizationProblemInComputationalGroupTheory.tex
PyPermGroup/: CMakeLists.txt  PyPerm.cpp  PyPerm.h  PyPermGroup.cpp  PyPermGroup.vcxproj  PyPermGroup.vcxproj.filters  PyStabChain.cpp  PyStabChain.h
PyPermGroup/Source/: PyPerm.cpp  PyPermGroup.cpp  PyPermGroup.h  PyStabChain.cpp
Test/: CMakeLists.txt  Rubiks3x3x3_LL.txt  Test.cpp  Test.vcxproj  Test.vcxproj.filters
